# apkas

./: .dockerignore  .gitignore  .mise.toml  CLAUDE.md  README.md  compose.yml  eslint.config.mjs  package.json  turbo.json
.claude/: settings.local.json
.devcontainer/admin/: devcontainer.json
.devcontainer/api/: devcontainer.json
.devcontainer/frontend/: devcontainer.json
.github/scripts/: wait_localstack.sh
.github/workflows/: _build_and_push_api.yml  _cd_admin.yml  _cd_lambda.yml  _cd_public.yml  _ci_admin.yml  _ci_diary.yml  _ci_lambda.yml  _ci_public.yml  _deploy_api.yml  _deploy_frontend.yml  _deploy_public.yml  _lint_and_format_api.yml  _test_api.yml  _test_frontend.yml  _test_public.yml  _typecheck_and_test_api.yml  cd_frontend.yml  cd_public.yml  ci.yml  ci_api.yml  ci_frontend.yml  ci_lambda.yml  ci_public.yml  cicd_admin.yml  cicd_api.yml  cicd_frontend.yml  cicd_lambda.yml  cicd_public.yml  create_release.yml  release_admin.yml  release_api.yml  release_frontend.yml  release_lambda.yml  release_public.yml
_articles/: 20240101.md  20240102.md  20240103.md  20250103.md
admin/: Dockerfile  README.md  compose.yml  eslint.config.mjs  middleware.ts  package.json  tailwind.config.ts
admin/app/: layout.tsx  page.tsx
admin/app/diary/: page.tsx
admin/app/photos/: page.tsx
admin/components/: AuthButton.tsx  ClientLayout.tsx  HamburgerIcon.tsx  PhotoDetailPanel.tsx  PhotoGrid.tsx  PhotoUpload.tsx  Sidebar.tsx
admin/lib/: auth.ts  aws.ts
api/: Dockerfile  README.md  compose.yml  pyproject.toml
api/.devcontainer/: devcontainer.json
api/app/: main.py
api/app/core/: blog.py  diary.py
api/app/model/: blog.py  diary.py
api/app/store/: client.py
api/app/store/connection/: postgres.py
api/app/store/impl/: _postgres.py  blog.py  diary.py  postgres.py
api/app/util/: time.py
api/app/web/: route.py
api/app/web/controller/: index.py  v1.py
api/deploy/: Dockerfile
api/postgres/: init.sql
api/test/: test_main.py
api/test/core/: test_blog.py  test_blog_core.py  test_diary.py  test_diary_core.py
api/test/store/impl/: test_blog_store.py  test_diary_store.py  test_postgres.py  test_postgres_blog.py
api/test/web/controller/: test_index.py  test_v1.py
app/: layout.tsx  page.tsx
app/articles/[slug]/: page.tsx
apps/admin/: Dockerfile  README.md  eslint.config.mjs  middleware.ts  next.config.ts  package.json
apps/admin/app/: globals.css  layout.tsx  page.tsx
apps/admin/components/: auth.tsx  markdown.tsx
apps/admin/core/: diary.test.ts  diary.ts  sample.test.ts  sample.ts
apps/public/: README.md  package.json
apps/public/app/: page.tsx
apps/public/core/: diary.test.ts  diary.ts
apps/public/store/: diary.ts
components/: card.tsx
core/: articles.ts  config.ts
database/: README.md  alembic.ini  pyproject.toml
database/migration/: env.py
database/migration/versions/: 358749a6f341_blog.py  4d8c2df34094_create_schema.py  d30d939e987c_create_table.py
docs/: aws-sso-setup.md  testing-lambda-photo-resizer.md
frontend/: Dockerfile  README.md  compose.yml  eslint.config.mjs  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
frontend/.devcontainer/: devcontainer.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/component/blog/: list.tsx
frontend/component/common/: footer.tsx
frontend/core/: diary.test.ts  diary.ts  sample.test.ts
frontend/core/fetch/: blog.test.ts  blog.ts
frontend/core/model/: blog.ts
frontend/model/: diary.test.ts  diary.ts
frontend/store/: diary.test.ts  diary.ts
lambda/: .gitignore  Dockerfile  README.md  compose.yml  main.py  photo_resizer.py  pyproject.toml  requirements.txt
lambda/app/: main.py
lambda/app/core/: process_photo.py
lambda/app/image/: resize.py
lambda/app/model/: photo.py
lambda/functions/process_photo/: function.jsonnet  function.local.jsonnet  main.py
lambda/image/: resize.py
lambda/layer/: Dockerfile
lambda/test/: test_sample.py
lambda/test/image/: test_resize.py
lambda/tests/core/: test_process_photo.py
lambda/tests/model/: test_photo.py
localstack/: Dockerfile  compose.yml  init.sh
scripts/: build-lambda-layer.sh  build-lambda.sh  create-test-image.py  deploy.sh  start-localstack.sh  test-lambda-photo-resizer.sh
terraform/: backend.prod.hcl  backend.staging.hcl  dynamodb.tf  iam.tf  lambda-layer.tf  lambda.tf  outputs.tf  provider.tf  s3.tf  terraform.tfvars.local  terraform.tfvars.prod  terraform.tfvars.staging  variables.tf
terraform/common/: main.tf  provider.tf  variables.tf
terraform/env/production/: .terraform.lock.hcl  backend.tf  main.tf  production.auto.tfvars
terraform/env/staging/: backend.tf  main.tf  staging.auto.tfvars  variables.tf
terraform/modules/api/: ecr.tf  variables.tf
terraform/modules/apkas/: apprunner.tf  (+12 more)
(+22 files in other folders)
