[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "fastapi>=0.115.7",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "taskipy>=1.14.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.3",
    "types-psycopg2>=2.9.21.20250121",
]

[tool.taskipy.tasks]
dev = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
prod = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
lint = "ruff check . --diff"
lint-fix = "ruff check . --fix"
format = "ruff format . --check --diff"
format-fix = "ruff format ."
typecheck = "mypy"
test = "pytest"
check-all = "task lint && task format && task typecheck && task test"
fix-all = "task lint-fix && task format-fix && task typecheck && task test"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-local-folder = ["core", "main", "model", "store", "util", "web"]
section-order = ["standard-library", "third-party", "local-folder"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
files = "app"
mypy_path = "app"
strict = true
explicit_package_bases = true

[tool.pytest.ini_options]
pythonpath = "app"
